FIX: Further fix for Chat-settings/member list failing to scroll on IOS/iPadOS, fix member item width overflowing the container

--- a/plugins/chat/assets/stylesheets/common/base-common.scss
+++ b/plugins/chat/assets/stylesheets/common/base-common.scss
@@ -21,7 +21,25 @@ html.ios-device.composer-open body {
 
 html.ios-device.has-full-page-chat body {
   position: fixed;
-  overflow: scroll;
+  overflow: hidden;
+}
+
+html.ios-device.has-full-page-chat body #main-outlet {
+  .c-routes.--channel-info,
+  .c-routes.--channel-info .c-channel-info {
+    @include chat-height;
+    display: flex;
+    flex-direction: column;
+    min-height: 0;
+    overflow: hidden;
+  }
+
+  .c-routes.--channel-info-settings,
+  .c-routes.--channel-info-members {
+    flex: 1;
+    min-height: 0;
+    overflow-y: auto;
+  }
 }
 
 .uppy-is-drag-over .chat-composer .drop-a-file {
